-fix: bug when on mobile devices

--- a/frontend/src/app/vote/vote.component.css
+++ b/frontend/src/app/vote/vote.component.css
@@ -8,7 +8,7 @@
   border: none;
   transition: transform 0.2s;
   font-weight: bolder;
-  margin: 100px;
+  margin: 10%;
   height: 600px;
   width: 320px;
   border-radius: 20px;
